// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar.svelte > should render indeterminate progress 1`] = `
<div>
  <rk-progress
    class="indeterminate"
    style="height: 1.5mm;"
  >
    <value-bar
      class="h-full"
      style="width: 100%;"
    />
  </rk-progress>
  
</div>
`;

exports[`ProgressBar.svelte > should render indeterminate progress 2`] = `
<div>
  <rk-progress
    class="indeterminate"
    style="height: 1.5mm;"
  >
    <value-bar
      class="h-full"
      style="width: 100%;"
    />
  </rk-progress>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with class 1`] = `
<div>
  <rk-progress
    class="my-class indeterminate"
    style="height: 1.5mm;"
  >
    <value-bar
      class="h-full"
      style="width: 100%;"
    />
  </rk-progress>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with class 2`] = `
<div>
  <rk-progress
    class="my-class-2 indeterminate"
    style="height: 1.5mm;"
  >
    <value-bar
      class="h-full"
      style="width: 100%;"
    />
  </rk-progress>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with value 1`] = `
<div>
  <rk-progress
    style="height: 1.5mm;"
  >
    <value-bar
      class="h-full"
      style="width: 50%;"
    />
  </rk-progress>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with value 2`] = `
<div>
  <rk-progress
    style="height: 1.5mm;"
  >
    <value-bar
      class="h-full"
      style="width: 100%;"
    />
  </rk-progress>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress with custom height 1`] = `
<div>
  <rk-progress
    class="indeterminate"
    style="height: 3px;"
  >
    <value-bar
      class="h-full"
      style="width: 100%;"
    />
  </rk-progress>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress with custom height 2`] = `
<div>
  <rk-progress
    class="indeterminate"
    style="height: 5px;"
  >
    <value-bar
      class="h-full"
      style="width: 100%;"
    />
  </rk-progress>
  
</div>
`;
